Plus de questions plus d animation

--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
     <header>
       <section>
         <h1>Le jeu du console log</h1>
-        <h2>Quiz sur les const let var</h2>
+        <h2>Quiz sur javascript</h2>
       </section>
       <nav>
         <p>
           <span id="goDown">&larr;</span> Questions :
-          <span id="current"></span>/<span id="final"> </span
+          <span id="current"></span>/ <span id="final"> </span
           ><span id="goUp">&rarr;</span>
         </p>
       </nav>
     </header>
     <main>
-      <code id="question">Mon code ici</code>
+      <section>
+        <code id="question">Mon code ici</code>
+        <div id="animationSwitch"></div>
+        <a href="https://github.com/LEVASSEUR-Romain/Apprendre_en_jouant_JS"
+          >Le liens du github du jeu</a
+        >
+      </section>
       <section>
         <div id="coms">Commentaire ou aide</div>
         <div id="reponses"></div>
